cabal-version:      2.4
name:               rep
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jaro Reinders
maintainer:         jaro.reinders@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library lev-sig
    signatures: Lev
    build-depends: base, ghc-prim

library unlifted
    exposed-modules: Unlifted
    build-depends: base, ghc-prim

library lifted
    exposed-modules: Lifted
    build-depends: base, ghc-prim

library map
    exposed-modules: Map
    build-depends: base, ghc-prim, lev-sig

executable rep
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0, map, lifted, unlifted, ghc-prim
    mixins:
      map (Map as Map.Unlifted) requires (Lev as Unlifted),
      map (Map as Map.Lifted)   requires (Lev as Lifted)
    hs-source-dirs:   app
    default-language: Haskell2010
